css for dark mode and some style corrections

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,59 +5,4 @@
 
 
 
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
-
-body { 
-	background-color: Black; 
-	font-family: 'Josefin Sans', sans-serif;
-}
-
-
-$dark-background-color-base : #0d1117;
-$dark-border-color: #21262d;
-
-body {
-  font-family: 'Josefin Sans', sans-serif;
-}
-
-body.light {
-  color: black;
-  background-color: white;
-
-  #logo {
-    color: black;
-  }
-
-  #menu-links {
-    a {
-      color: black;
-    }
-  }
-}
-
-body.dark {
-  color: white;
-  background-color: $dark-background-color-base;
-  border-color: $dark-border-color !important;
-
-  #logo {
-    color: white;
-  }
-
-  header {
-    background-color: $dark-background-color-base;
-    border-color: $dark-border-color !important;
-  }
-
-  #menu-links {
-    a {
-      color: white;
-    }
-  }
-
-  #user-dropdown-button {
-    color: white;
-  }
-}
-
 
